# deep-research-report-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py
src/agents/: __init__.py  research_agent.py
src/config/: __init__.py  settings.py
src/tools/: __init__.py  search.py
src/utils/: __init__.py  logging.py
tests/: conftest.py  test_agent.py  test_config.py  test_tools.py
